--- a/index.html
+++ b/index.html
@@ -3,55 +3,48 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Teachable Machine Face Recognition</title>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.9.0"></script>
+  <title>Teachable Machine Face Recognition (Mobile)</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 </head>
-<body style="text-align:center; font-family:sans-serif;">
-  <h2>Face Recognition (Teachable Machine)</h2>
-  <div id="webcam-container"></div>
-  <div id="label-container"></div>
+<body style="font-family: Arial; text-align: center;">
+  <h2>Face Recognition (MIT App + Teachable Machine)</h2>
+  <p id="status">Model loading...</p>
+  <h3 id="result"></h3>
 
-  <script type="text/javascript">
-    const URL = "./"; // same folder as your model
-    let model, webcam, labelContainer, maxPredictions;
+  <script>
+    const URL = "https://teachablemachine.withgoogle.com/models/XXXXXXX/"; // 🔹 Replace this with your model link
+    let model;
 
-    async function init() {
+    async function loadModel() {
       const modelURL = URL + "model.json";
       const metadataURL = URL + "metadata.json";
-
       model = await tmImage.load(modelURL, metadataURL);
-      maxPredictions = model.getTotalClasses();
+      document.getElementById("status").innerHTML = "✅ Model loaded successfully";
+    }
 
-      const flip = true;
-      webcam = new tmImage.Webcam(300, 300, flip);
-      await webcam.setup(); // ask for webcam permission
-      await webcam.play();
-      window.requestAnimationFrame(loop);
+    // Function to receive Base64 image from MIT App
+    async function classifyImage(base64Image) {
+      const img = new Image();
+      img.src = base64Image;
 
-      document.getElementById("webcam-container").appendChild(webcam.canvas);
-      labelContainer = document.getElementById("label-container");
-      for (let i = 0; i < maxPredictions; i++) {
-        labelContainer.appendChild(document.createElement("div"));
+      img.onload = async function () {
+        const prediction = await model.predict(img);
+        const top = prediction.reduce((a, b) => (a.probability > b.probability ? a : b));
+        document.getElementById("result").innerHTML =
+          "Prediction: " + top.className + "<br>Confidence: " + (top.probability * 100).toFixed(2) + "%";
+      };
+    }
+
+    // This allows MIT App Inventor to send data to this page
+    window.addEventListener("message", (event) => {
+      if (event.data.startsWith("data:image")) {
+        classifyImage(event.data);
       }
-    }
+    });
 
-    async function loop() {
-      webcam.update();
-      await predict();
-      window.requestAnimationFrame(loop);
-    }
-
-    async function predict() {
-      const prediction = await model.predict(webcam.canvas);
-      for (let i = 0; i < maxPredictions; i++) {
-        const classPrediction =
-          prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-        labelContainer.childNodes[i].innerHTML = classPrediction;
-      }
-    }
-
-    init();
+    loadModel();
   </script>
 </body>
 </html>
+
